# CPSL_compiler

./: .gitignore  CMakeLists.txt  Register.cpp  Register.h  RegisterPool.cpp  RegisterPool.h  Scope.cpp  Scope.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  classes.h  globals.cpp  globals.h  includes.h  main.cpp  parser.y  questions.txt  scanner.l
classes/: Add.cpp  Add.h  Block.cpp  Block.h  Body.cpp  Body.h  Const.cpp  Const.h  Expr.h  Param.cpp  Param.h  Program.cpp  Program.h  Type.cpp  VarAssign.cpp  VarAssign.h  VarDecl.cpp  VarDecl.h  const.cpp  const.h  expr.h
classes/Callable/: Callable.cpp  Callable.h  Function.cpp  Function.h  Procedure.cpp  Procedure.h
classes/Const/: ConstAssign.cpp  ConstAssign.h  ConstDecl.cpp  ConstDecl.h
classes/Expr/: Expr.h  Ident.cpp  Ident.h  ProcCall.cpp  ProcCall.h
classes/Expr/Const/: BoolConst.cpp  BoolConst.h  ChrConst.cpp  ChrConst.h  Const.cpp  Const.h  IntConst.cpp  IntConst.h  StrConst.cpp  StrConst.h
classes/Expr/ConstExpr/: BoolConstExpr.cpp  BoolConstExpr.h  ChrConstExpr.cpp  ChrConstExpr.h  ConstExpr.cpp  ConstExpr.h  IntConstExpr.cpp  IntConstExpr.h  StrConstExpr.cpp  StrConstExpr.h
classes/Expr/LValue/: DotExt.cpp  DotExt.h  Ext.h  IndexExt.cpp  IndexExt.h  LValue.cpp  LValue.h
classes/Expr/OpExpr/: OpExpr.cpp  OpExpr.h
classes/Expr/OpExpr/BinOpExpr/: BinOpExpr.cpp  BinOpExpr.h
classes/Expr/OpExpr/BinOpExpr/ArithBinOpExpr/: Add.cpp  Add.h  ArithBinOpExpr.cpp  ArithBinOpExpr.h  Div.cpp  Div.h  Mod.cpp  Mod.h  Mult.cpp  Mult.h  Sub.cpp  Sub.h
classes/Expr/OpExpr/BinOpExpr/BoolBinOpExpr/: Amp.cpp  Amp.h  Bar.cpp  Bar.h  BoolBinOpExpr.cpp  BoolBinOpExpr.h
classes/Expr/OpExpr/BinOpExpr/CmprBinOpExpr/: CmprBinOpExpr.cpp  CmprBinOpExpr.h  EQ.cpp  EQ.h  Eq.cpp  Eq.h  GEQ.cpp  GEQ.h  GT.cpp  GT.h  Geq.cpp  Geq.h  Gt.cpp  Gt.h  LEQ.cpp  LEQ.h  LT.cpp  LT.h  Leq.cpp  Leq.h  Lt.cpp  Lt.h  NEQ.cpp  NEQ.h  Neq.cpp  Neq.h
classes/Expr/OpExpr/BinOpExpr/CmprBinOptExpr/: CmprBinOptExpr.cpp  EQ.h  GEQ.h  GT.h  LEQ.cpp  LEQ.h  LT.cpp  LT.h  NEQ.h
classes/Expr/OpExpr/UnaryOpExpr/: Not.cpp  Not.h  UnaryMinus.cpp  UnaryMinus.h  UnaryOpExpr.cpp  UnaryOpExpr.h
classes/Expr/OpExpr/UnaryOpExpr/IntrinsicFunc/: ChrFunc.cpp  ChrFunc.h  OrdFunc.cpp  OrdFunc.h  PredFunc.cpp  PredFunc.h  SuccFunc.cpp  SuccFunc.h
classes/List/: DotOrIndexPlus.cpp  DotOrIndexPlus.h  ElseIfStmtList.cpp  ElseIfStmtList.h  ExprList.cpp  ExprList.h  IdList.cpp  IdList.h  List.h  StmtList.cpp  StmtList.h  StrList.cpp  StrList.h  VarAssignList.cpp  VarAssignList.h  idList.cpp  idList.h
classes/Opt/: Opt.cpp  Opt.h  VarDeclOpt.cpp  VarDeclOpt.h
classes/Stmt/: AssnStmt.cpp  AssnStmt.h  ElseIfStmt.cpp  ElseIfStmt.h  ElseStmt.cpp  ElseStmt.h  ForStmt.cpp  ForStmt.h  IfStmt.cpp  IfStmt.h  NullStmt.cpp  NullStmt.h  ProcCall.cpp  ProcCall.h  ReadStmt.cpp  ReadStmt.h  RepeatStmt.cpp  RepeatStmt.h  ReturnStmt.cpp  ReturnStmt.h  Stmt.h  Stop.cpp  Stop.h  StopStmt.cpp  StopStmt.h  WhileStmt.cpp  WhileStmt.h  WriteStmt.cpp  WriteStmt.h
classes/Type/: ArrayType.cpp  ArrayType.h  ChrConst.cpp  ChrConst.h  ChrConstExpr.h  IntType.cpp  IntType.h  Primitive.cpp  Primitive.h  RecordType.cpp  RecordType.h  SimpleType.cpp  SimpleType.h  StrType.cpp  StrType.h  Type.cpp  Type.h  TypeAssign.cpp  TypeAssign.h  TypeDecl.cpp  TypeDecl.h
classes/Type/Primitive/: ChrType.cpp  Primitive.cpp  Primitive.h
classes/Var/: VarAssign.cpp  VarAssign.h  VarDecl.cpp  VarDecl.h
testing/: MarsTester.sh  grammarCheck.txt  grammarTester.sh  marsOutput.txt  mips.asm
testing/examples/control/: while_nested.cpsl
testing/examples/simple_expressions/: assignment.cpsl
testing/examples/udt/: simple_array.cpsl
